# flaremask

./: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  setup.md  test-cf-api.sh  wrangler.toml
.github/workflows/: build.yml  deploy.yml  release-artifacts.yml
client/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
client/public/: manifest.webmanifest
client/src/: App.svelte  main.js  style.css
client/src/components/: AliasManager.svelte  AliasTemplateEditor.svelte  SettingRow.svelte  SettingsPanel.svelte  Toggle.svelte
client/src/components/alias/: AliasManager.svelte  AliasTemplateEditor.svelte  EmailVerification.svelte
client/src/components/settings/: SettingRow.svelte  SettingsPanel.svelte
client/src/extension/: manifest.json
client/src/extension/background/: index.js
client/src/extension/content/: AliasList.svelte  index.js
client/src/extension/input_inject/: AliasList.svelte  InputButton.svelte  Popover.svelte  index.js
client/src/extension/lib/: aliases.js  storage.js
client/src/extension/popup/: OnboardingView.svelte  Popup.svelte  SettingsView.svelte  index.html  main.js
client/src/lib/: aliasCache.js  aliases.js  api.js  auth.js  settings.js  storage.js  templates.js  theme.css  utils.js
client/src/lib/data/: adjectives.json  nouns.json
worker/: Cargo.toml
worker/src/: auth.rs  lib.rs
worker/src/api/: cloudflare.rs  mod.rs
