[package]
name = "flaremask"
version = "0.1.0"
edition = "2021"
authors = ["samolego"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json", "query"] }
tower-service = "0.3.3"
jwt-simple = "0.12.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
urlencoding = "2"
wasm-bindgen = "0.2.121"
send_wrapper = { version = "0.6", features = ["futures"] }
